<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity"
    android:background="@drawable/background_login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/bluelight"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/ic_account"
            android:drawablePadding="8dp"
            android:hint="@string/username"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:fontFamily="@font/montserrat"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:fontFamily="@font/montserrat"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/Password2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

        <Button
            android:id="@+id/btn_register2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/bluedark"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            style="@style/Button"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="35dp" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:text="@string/SignUpSubtitle"
            android:textAlignment="center"
            android:textColor="@color/bluelight"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>